[project]
name = "ambient-player"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Artur Borecki", email = "me@pufereq.pl"},
]
dependencies = ["playsound3>=3.2.3", "pyyaml>=6.0.2"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "GPL-3.0"}


[tool.pdm]
distribution = false
